6.3.6-7 Added @BeforeEach and @AfterEach, change to Arrys.asList() in test CollectionTestSuite